[gd_scene load_steps=9 format=4 uid="uid://crhv720fujilk"]

[ext_resource type="Texture2D" uid="uid://56eyrl3j88ir" path="res://Assets/Sidescroller Shooter - Central City/Background/Base Color.png" id="1_3dryh"]
[ext_resource type="Script" uid="uid://btraov718hnvb" path="res://Scripts/game.gd" id="1_v158k"]
[ext_resource type="Texture2D" uid="uid://jvgjs6ulwiph" path="res://Assets/Sidescroller Shooter - Central City/Social/MockUp-01.png" id="2_wowpa"]
[ext_resource type="TileSet" uid="uid://b5tm32j1qeeup" path="res://Assets/tile_set.tres" id="3_i6g32"]
[ext_resource type="PackedScene" uid="uid://c3bv3fafgo3sa" path="res://Scenes/player.tscn" id="4_1l0tm"]
[ext_resource type="FontFile" uid="uid://caxcdvapyomap" path="res://Assets/Interceptor.otf" id="4_i6g32"]
[ext_resource type="Script" path="res://Scripts/text_box.gd" id="5_h4fw4"]
[ext_resource type="PackedScene" uid="uid://63nykbhk1dom" path="res://Scenes/npc.tscn" id="5_wowpa"]

[node name="GameManager" type="Node2D"]
script = ExtResource("1_v158k")

[node name="BaseColor" type="Sprite2D" parent="."]
position = Vector2(434, 322)
scale = Vector2(2.38125, 2.00625)
texture = ExtResource("1_3dryh")

[node name="MockUp-01" type="Sprite2D" parent="."]
position = Vector2(2754, 408)
texture = ExtResource("2_wowpa")

[node name="Buildings" type="TileMapLayer" parent="."]
texture_filter = 1
tile_map_data = PackedByteArray("AAAPAA0ABAAVAAQAAAAPAA4ABAAVAAQAAAAPAA8ABAAVAAQAAAAQAA0ABAAVAAQAAAAQAA4ABAAVAAQAAAAQAA8ABAAVAAQAAAARAA0ABAAVAAQAAAARAA4ABAAVAAQAAAARAA8ABAAVAAQAAAASAA0ABAAVAAQAAAASAA4ABAAVAAQAAAASAA8ABAAVAAQAAAATAA0ABAAVAAQAAAATAA4ABAAVAAQAAAATAA8ABAAVAAQAAAAUAA0ABAAbAAcAAAAUAA4ABAAbAAgAAAAUAA8ABAAbAAkAAAAVAA0ABAAUAAQAAAAVAA4ABAAUAAQAAAAVAA8ABAAUAAQAAAAWAA0ABAAVAAQAAAAWAA4ABAAVAAQAAAAWAA8ABAAVAAQAAAAXAA0ABAAVAAQAAAAXAA4ABAAVAAQAAAAXAA8ABAAVAAQAAAAYAA0ABAAVAAQAAAAYAA4ABAAVAAQAAAAYAA8ABAAVAAQAAAAZAA0ABAAbAAcAAAAZAA4ABAAbAAgAAAAZAA8ABAAbAAkAAAAaAA0ABAAUAAQAAAAaAA4ABAAUAAQAAAAaAA8ABAAUAAQAAAAbAA0ABAAVAAQAAAAbAA4ABAAVAAQAAAAbAA8ABAAVAAQAAAAcAA0ABAAVAAQAAAAcAA4ABAAVAAQAAAAcAA8ABAAVAAQAAAAdAA0ABAAVAAQAAAAdAA4ABAAVAAQAAAAdAA8ABAAVAAQAAAAeAA0ABAAVAAQAAAAeAA4ABAAVAAQAAAAeAA8ABAAVAAQAAAAfAA0ABAAVAAQAAAAfAA4ABAAVAAQAAAAfAA8ABAAVAAQAAAAgAA0ABAAbAAcAAAAgAA4ABAAbAAgAAAAgAA8ABAAbAAkAAAAAAAYABAAXAAcAAAAAAAcABAAXAAgAAAAAAAgABAAVAAUAAAAAAAkABAAVAAUAAAAAAAoABAAaAAcAAAAAAAsABAAaAAgAAAAAAAwABAAaAAkAAAAAAA0ABAAaAAkAAAAAAA4ABAAaAAkAAAAAAA8ABAAaAAoAAAABAAYABAAYAAcAAAABAAcABAAYAAgAAAABAAgABAAVAAUAAAABAAkABAAVAAUAAAABAAoABAAVAAMAAAABAAsABAAUAAQAAAABAAwABAAUAAQAAAABAA0ABAAUAAQAAAABAA4ABAAUAAQAAAABAA8ABAAUAAQAAAACAAYABAAYAAcAAAACAAcABAAYAAgAAAACAAgABAAVAAUAAAACAAkABAAVAAUAAAACAAoABAAVAAMAAAACAAsABAAVAAQAAAACAAwABAAVAAUAAAACAA0ABAAVAAQAAAACAA4ABAAVAAUAAAACAA8ABAAVAAUAAAADAAYABAAZAAcAAAADAAcABAAZAAgAAAADAAgABAAVAAUAAAADAAkABAAVAAUAAAADAAoABAAVAAMAAAADAAsABAAVAAQAAAADAAwABAAVAAUAAAADAA0ABAAVAAQAAAADAA4ABAAVAAUAAAADAA8ABAAVAAUAAAAEAAAABAAbAAcAAAAEAAEABAAaAAgAAAAEAAIABAAaAAkAAAAEAAMABAAaAAgAAAAEAAQABAAaAAgAAAAEAAUABAAaAAkAAAAEAAYABAAaAAkAAAAEAAcABAAaAAoAAAAEAAgABAAVAAUAAAAEAAkABAAVAAUAAAAEAAoABAAVAAMAAAAEAAsABAAVAAUAAAAEAAwABAAVAAQAAAAEAA0ABAAVAAUAAAAEAA4ABAAVAAQAAAAEAA8ABAAVAAUAAAAFAAAABAAUAAQAAAAFAAEABAAUAAUAAAAFAAIABAAUAAQAAAAFAAMABAAUAAQAAAAFAAQABAAUAAQAAAAFAAUABAAUAAQAAAAFAAYABAAUAAQAAAAFAAcABAAUAAQAAAAFAAgABAAVAAUAAAAFAAkABAAVAAUAAAAFAAoABAAVAAMAAAAFAAsABAAVAAQAAAAFAAwABAAVAAQAAAAFAA0ABAAVAAQAAAAFAA4ABAAVAAQAAAAFAA8ABAAVAAUAAAAGAAAABAAVAAQAAAAGAAEABAAVAAUAAAAGAAIABAAVAAQAAAAGAAMABAAVAAQAAAAGAAQABAAVAAQAAAAGAAUABAAVAAQAAAAGAAYABAAVAAQAAAAGAAcABAAVAAUAAAAGAAgABAAVAAUAAAAGAAkABAAVAAUAAAAGAAoABAAaAAcAAAAGAAsABAAaAAgAAAAGAAwABAAaAAkAAAAGAA0ABAAaAAkAAAAGAA4ABAAaAAkAAAAGAA8ABAAaAAoAAAAHAAAABAAVAAUAAAAHAAEABAAVAAUAAAAHAAIABAAVAAQAAAAHAAMABAAVAAQAAAAHAAQABAAVAAQAAAAHAAUABAAVAAQAAAAHAAYABAAVAAQAAAAHAAcABAAVAAUAAAAHAAgABAAVAAUAAAAHAAkABAAVAAUAAAAHAAoABAAVAAMAAAAHAAsABAAUAAQAAAAHAAwABAAUAAQAAAAHAA0ABAAUAAQAAAAHAA4ABAAUAAQAAAAHAA8ABAAUAAQAAAAIAAAABAAVAAUAAAAIAAEABAAVAAUAAAAIAAIABAAVAAQAAAAIAAMABAAVAAQAAAAIAAQABAAVAAQAAAAIAAUABAAVAAQAAAAIAAYABAAVAAQAAAAIAAcABAAVAAUAAAAIAAgABAAVAAUAAAAIAAkABAAVAAUAAAAIAAoABAAVAAMAAAAIAAsABAAVAAQAAAAIAAwABAAVAAQAAAAIAA0ABAAVAAQAAAAIAA4ABAAVAAUAAAAIAA8ABAAVAAUAAAAJAAAABAAVAAUAAAAJAAEABAAVAAUAAAAJAAIABAAVAAUAAAAJAAMABAAVAAUAAAAJAAQABAAVAAUAAAAJAAUABAAVAAUAAAAJAAYABAAVAAUAAAAJAAcABAAVAAUAAAAJAAgABAAVAAUAAAAJAAkABAAVAAUAAAAJAAoABAAVAAMAAAAJAAsABAAVAAUAAAAJAAwABAAVAAUAAAAJAA0ABAAVAAUAAAAJAA4ABAAVAAUAAAAJAA8ABAAVAAUAAAAKAAAABAAVAAUAAAAKAAEABAAVAAUAAAAKAAIABAAVAAQAAAAKAAMABAAVAAQAAAAKAAQABAAVAAQAAAAKAAUABAAVAAUAAAAKAAYABAAVAAUAAAAKAAcABAAVAAUAAAAKAAgABAAVAAUAAAAKAAkABAAVAAUAAAAKAAoABAAVAAMAAAAKAAsABAAVAAUAAAAKAAwABAAVAAUAAAAKAA0ABAAVAAUAAAAKAA4ABAAVAAUAAAAKAA8ABAAVAAUAAAALAAAABAAVAAUAAAALAAEABAAVAAUAAAALAAIABAAVAAQAAAALAAMABAAVAAQAAAALAAQABAAVAAQAAAALAAUABAAVAAUAAAALAAYABAAVAAUAAAALAAcABAAVAAUAAAALAAgABAAVAAUAAAALAAkABAAVAAUAAAALAAoABAAVAAMAAAALAAsABAAVAAUAAAALAAwABAAVAAUAAAALAA0ABAAVAAUAAAALAA4ABAAVAAUAAAALAA8ABAAVAAUAAAAMAAAABAAVAAUAAAAMAAEABAAVAAUAAAAMAAIABAAVAAQAAAAMAAMABAAVAAQAAAAMAAQABAAVAAQAAAAMAAUABAAVAAUAAAAMAAYABAAVAAUAAAAMAAcABAAVAAUAAAAMAAgABAAVAAUAAAAMAAkABAAVAAUAAAAMAAoABAAVAAMAAAAMAAsABAAVAAQAAAAMAAwABAAVAAQAAAAMAA0ABAAVAAQAAAAMAA4ABAAVAAUAAAAMAA8ABAAVAAUAAAANAAAABAAbAAcAAAANAAEABAAbAAcAAAANAAIABAAaAAgAAAANAAMABAAaAAkAAAANAAQABAAbAAcAAAANAAUABAAbAAcAAAANAAYABAAbAAgAAAANAAcABAAbAAkAAAANAAgABAAVAAUAAAANAAkABAAVAAUAAAANAAoABAAaAAcAAAANAAsABAAaAAgAAAANAAwABAAaAAkAAAANAA0ABAAaAAkAAAANAA4ABAAaAAkAAAANAA8ABAAaAAoAAAAOAAAABAAUAAQAAAAOAAEABAAUAAQAAAAOAAIABAAUAAQAAAAOAAMABAAUAAQAAAAOAAQABAAUAAQAAAAOAAUABAAUAAQAAAAOAAYABAAUAAQAAAAOAAcABAAUAAQAAAAOAAgABAAUAAQAAAAOAAkABAAUAAQAAAAOAAoABAAUAAQAAAAOAAsABAAUAAQAAAAOAAwABAAUAAQAAAAOAA0ABAAUAAQAAAAOAA4ABAAUAAQAAAAOAA8ABAAUAAQAAAAPAAAABAAVAAQAAAAPAAEABAAVAAQAAAAPAAIABAAVAAQAAAAPAAMABAAVAAQAAAAPAAQABAAVAAQAAAAPAAUABAAVAAQAAAAPAAYABAAVAAQAAAAPAAcABAAVAAQAAAAPAAgABAAVAAQAAAAPAAkABAAVAAQAAAAPAAoABAAVAAQAAAAPAAsABAAVAAQAAAAPAAwABAAVAAQAAAAQAAAABAAVAAQAAAAQAAEABAAVAAQAAAAQAAIABAAVAAQAAAAQAAMABAAVAAQAAAAQAAQABAAVAAQAAAAQAAUABAAVAAQAAAAQAAYABAAVAAQAAAAQAAcABAAVAAQAAAAQAAgABAAVAAQAAAAQAAkABAAVAAQAAAAQAAoABAAVAAQAAAAQAAsABAAVAAQAAAAQAAwABAAVAAQAAAARAAAABAAVAAQAAAARAAEABAAVAAQAAAARAAIABAAVAAQAAAARAAMABAAVAAQAAAARAAQABAAVAAQAAAARAAUABAAVAAQAAAARAAYABAAVAAQAAAARAAcABAAVAAQAAAARAAgABAAVAAQAAAARAAkABAAVAAQAAAARAAoABAAVAAQAAAARAAsABAAVAAQAAAARAAwABAAVAAQAAAASAAAABAAVAAQAAAASAAEABAAVAAQAAAASAAIABAAVAAQAAAASAAMABAAVAAQAAAASAAQABAAVAAQAAAASAAUABAAVAAQAAAASAAYABAAVAAQAAAASAAcABAAVAAQAAAASAAgABAAVAAQAAAASAAkABAAVAAQAAAASAAoABAAVAAQAAAASAAsABAAVAAQAAAASAAwABAAVAAQAAAATAAAABAAVAAQAAAATAAEABAAVAAQAAAATAAIABAAVAAQAAAATAAMABAAVAAQAAAATAAQABAAVAAQAAAATAAUABAAVAAQAAAATAAYABAAVAAQAAAATAAcABAAVAAQAAAATAAgABAAVAAQAAAATAAkABAAVAAQAAAATAAoABAAVAAQAAAATAAsABAAVAAQAAAATAAwABAAVAAQAAAAUAAAABAAbAAcAAAAUAAEABAAbAAcAAAAUAAIABAAbAAcAAAAUAAMABAAbAAcAAAAUAAQABAAbAAcAAAAUAAUABAAbAAcAAAAUAAYABAAbAAcAAAAUAAcABAAbAAcAAAAUAAgABAAbAAcAAAAUAAkABAAbAAcAAAAUAAoABAAbAAcAAAAUAAsABAAbAAcAAAAUAAwABAAbAAcAAAAVAAAABAAUAAQAAAAVAAEABAAUAAQAAAAVAAIABAAUAAQAAAAVAAMABAAUAAQAAAAVAAQABAAUAAQAAAAVAAUABAAUAAQAAAAVAAYABAAUAAQAAAAVAAcABAAUAAQAAAAVAAgABAAUAAQAAAAVAAkABAAUAAQAAAAVAAoABAAUAAQAAAAVAAsABAAUAAQAAAAVAAwABAAUAAQAAAAWAAAABAAVAAQAAAAWAAEABAAVAAQAAAAWAAIABAAVAAQAAAAWAAMABAAVAAQAAAAWAAQABAAVAAQAAAAWAAUABAAVAAQAAAAWAAYABAAVAAQAAAAWAAcABAAVAAQAAAAWAAgABAAVAAQAAAAWAAkABAAVAAQAAAAWAAoABAAVAAQAAAAWAAsABAAVAAQAAAAWAAwABAAVAAQAAAAXAAAABAAVAAQAAAAXAAEABAAVAAQAAAAXAAIABAAVAAQAAAAXAAMABAAVAAQAAAAXAAQABAAVAAQAAAAXAAUABAAVAAQAAAAXAAYABAAVAAQAAAAXAAcABAAVAAQAAAAXAAgABAAVAAQAAAAXAAkABAAVAAQAAAAXAAoABAAVAAQAAAAXAAsABAAVAAQAAAAXAAwABAAVAAQAAAAYAAAABAAVAAQAAAAYAAEABAAVAAQAAAAYAAIABAAVAAQAAAAYAAMABAAVAAQAAAAYAAQABAAVAAQAAAAYAAUABAAVAAQAAAAYAAYABAAVAAQAAAAYAAcABAAVAAQAAAAYAAgABAAVAAQAAAAYAAkABAAVAAQAAAAYAAoABAAVAAQAAAAYAAsABAAVAAQAAAAYAAwABAAVAAQAAAAZAAAABAAbAAcAAAAZAAEABAAbAAcAAAAZAAIABAAbAAcAAAAZAAMABAAbAAcAAAAZAAQABAAbAAcAAAAZAAUABAAbAAcAAAAZAAYABAAbAAcAAAAZAAcABAAbAAcAAAAZAAgABAAbAAcAAAAZAAkABAAbAAcAAAAZAAoABAAbAAcAAAAZAAsABAAbAAcAAAAZAAwABAAbAAcAAAAaAAAABAAUAAQAAAAaAAEABAAUAAQAAAAaAAIABAAUAAQAAAAaAAMABAAUAAQAAAAaAAQABAAUAAQAAAAaAAUABAAUAAQAAAAaAAYABAAUAAQAAAAaAAcABAAVAAIAAAAaAAgABAAUAAQAAAAaAAkABAAUAAQAAAAaAAoABAAUAAQAAAAaAAsABAAUAAQAAAAaAAwABAAUAAQAAAAbAAAABAAVAAQAAAAbAAEABAAVAAQAAAAbAAIABAAVAAQAAAAbAAMABAAVAAQAAAAbAAQABAAVAAQAAAAbAAUABAAVAAQAAAAbAAYABAAVAAQAAAAbAAcABAAVAAIAAAAbAAgABAAVAAQAAAAbAAkABAAVAAQAAAAbAAoABAAVAAQAAAAbAAsABAAVAAQAAAAbAAwABAAVAAQAAAAcAAAABAAVAAQAAAAcAAEABAAVAAQAAAAcAAIABAAVAAQAAAAcAAMABAAVAAQAAAAcAAQABAAVAAQAAAAcAAUABAAVAAQAAAAcAAYABAAVAAQAAAAcAAcABAAVAAIAAAAcAAgABAAVAAQAAAAcAAkABAAVAAQAAAAcAAoABAAVAAQAAAAcAAsABAAVAAQAAAAcAAwABAAVAAQAAAAdAAAABAAVAAQAAAAdAAEABAAVAAQAAAAdAAIABAAVAAQAAAAdAAMABAAVAAQAAAAdAAQABAAVAAQAAAAdAAUABAAVAAQAAAAdAAYABAAVAAQAAAAdAAcABAAVAAIAAAAdAAgABAAVAAQAAAAdAAkABAAVAAQAAAAdAAoABAAVAAQAAAAdAAsABAAVAAQAAAAdAAwABAAVAAQAAAAeAAAABAAVAAQAAAAeAAEABAAVAAQAAAAeAAIABAAVAAQAAAAeAAMABAAVAAQAAAAeAAQABAAVAAQAAAAeAAUABAAVAAQAAAAeAAYABAAVAAQAAAAeAAcABAAVAAIAAAAeAAgABAAVAAQAAAAeAAkABAAVAAQAAAAeAAoABAAVAAQAAAAeAAsABAAVAAQAAAAeAAwABAAVAAQAAAAfAAAABAAVAAQAAAAfAAEABAAVAAQAAAAfAAIABAAVAAQAAAAfAAMABAAVAAQAAAAfAAQABAAVAAQAAAAfAAUABAAVAAQAAAAfAAYABAAVAAQAAAAfAAcABAAVAAIAAAAfAAgABAAVAAQAAAAfAAkABAAVAAQAAAAfAAoABAAVAAQAAAAfAAsABAAVAAQAAAAfAAwABAAVAAQAAAAgAAAABAAbAAcAAAAgAAEABAAbAAcAAAAgAAIABAAbAAcAAAAgAAMABAAbAAcAAAAgAAQABAAbAAcAAAAgAAUABAAbAAcAAAAgAAYABAAbAAcAAAAgAAcABAAbAAcAAAAgAAgABAAbAAcAAAAgAAkABAAbAAcAAAAgAAoABAAbAAcAAAAgAAsABAAbAAcAAAAgAAwABAAbAAcAAAA=")
tile_set = ExtResource("3_i6g32")

[node name="Props" type="TileMapLayer" parent="."]
texture_filter = 1
tile_map_data = PackedByteArray("AAARAA4ABAAAABYAAAARAA8ABAAAABcAAAASAA4ABAABABYAAAASAA8ABAABABcAAAATAA4ABAACABYAAAATAA8ABAACABcAAAAVAA4ABAAAAA8AAAAVAA8ABAAAABAAAAAWAA4ABAABAA8AAAAWAA8ABAABABAAAAAZAA0ABAAAABoAAAAaAA0ABAAFABgAAAAaAA4ABAAFABkAAAAaAA8ABAASAAsAAAAbAA4ABAAGABkAAAAbAA8ABAATAAsAAAAcAA4ABAAFABkAAAAcAA8ABAATAAgAAAAdAA4ABAAGABkAAAAdAA8ABAAUAAgAAAACAAsABAAgAAcAAAACAAwABAAgAAgAAAACAA0ABAAgAAkAAAACAA4ABAAgAAoAAAACAA8ABAAgAAsAAAADAAsABAAhAAcAAAADAAwABAAhAAgAAAADAA0ABAAhAAkAAAADAA4ABAAhAAoAAAADAA8ABAAhAAsAAAAEAAsABAAiAAcAAAAEAAwABAAiAAgAAAAEAA0ABAAiAAkAAAAEAA4ABAAiAAoAAAAEAA8ABAAiAAsAAAAGAAEABAAWAAAAAAAGAAIABAAWAAEAAAAGAAMABAAWAAIAAAAHAAEABAAXAAAAAAAHAAIABAAXAAEAAAAHAAMABAAXAAIAAAAHAAgABAACABMAAAAIAAEABAAWAAAAAAAIAAIABAAWAAEAAAAIAAMABAAWAAIAAAAIAAUABAAcAAAAAAAIAAYABAAcAAEAAAAIAAcABAAcAAIAAAAIAAgABAAcAAIAAAAIAAwABAAeAAMAAAAIAA0ABAAeAAQAAAAIAA4ABAAeAAUAAAAJAAEABAAXAAAAAAAJAAIABAAXAAEAAAAJAAMABAAXAAIAAAAJAAUABAAdAAAAAAAJAAYABAAdAAEAAAAJAAcABAAdAAIAAAAJAAgABAAdAAIAAAAJAAwABAAfAAMAAAAJAA0ABAAfAAQAAAAJAA4ABAAfAAUAAAAKAAEABAAWAAAAAAAKAAIABAAWAAEAAAAKAAMABAAWAAIAAAAKAAUABAAeAAAAAAAKAAYABAAeAAEAAAAKAAcABAAeAAIAAAAKAAgABAAeAAIAAAAKAAwABAAgAAMAAAAKAA0ABAAgAAQAAAAKAA4ABAAgAAUAAAALAAEABAAXAAAAAAALAAIABAAXAAEAAAALAAMABAAXAAIAAAALAAUABAAfAAAAAAALAAYABAAfAAEAAAALAAcABAAfAAIAAAALAAgABAAfAAIAAAALAAwABAAhAAMAAAALAA0ABAAhAAQAAAALAA4ABAAhAAUAAAAMAAUABAAgAAAAAAAMAAYABAAgAAEAAAAMAAcABAAgAAIAAAAMAAgABAAgAAIAAAAOAAAABAAcAAQAAAAOAAYABAABABkAAAAOAAcABAAaAAYAAAAOAAgABAASAAcAAAAOAAoABAAaAAQAAAAOAAsABAAZAAQAAAAOAAwABAAdAAYAAAAOAA4ABAAAAA8AAAAOAA8ABAAAABAAAAAPAAAABAAdAAQAAAAPAAEABAADABEAAAAPAAIABAADABIAAAAPAAMABAASAAsAAAAPAAYABAACABkAAAAPAAcABAAZAAUAAAAPAAgABAAUAAgAAAAPAA4ABAABAA8AAAAPAA8ABAABABAAAAAQAAEABAAEABEAAAAQAAIABAAEABIAAAAQAAMABAATAAsAAAAQAAYABAADABkAAAAQAAcABAAcAAQAAAAQAAgABAATAAgAAAAQAA4ABAACAA8AAAAQAA8ABAACABAAAAARAAEABAAFABEAAAARAAIABAAFABIAAAARAAMABAATAAsAAAARAAYABAADABkAAAARAAcABAAcAAQAAAARAAgABAAUAAgAAAARAA0ABAAAABUAAAASAAEABAAGABEAAAASAAIABAAGABIAAAASAAMABAAUAAsAAAASAAYABAADABkAAAASAAcABAAZAAUAAAASAAgABAATAAgAAAASAAsABAAZAAYAAAASAA0ABAABABUAAAATAAYABAAEABkAAAATAAcABAAaAAUAAAATAAgABAATAAcAAAATAAsABAAaAAYAAAATAAwABAACABQAAAATAA0ABAACABUAAAAVAAAABAABABsAAAAVAAEABAABABwAAAAWAAAABAACABsAAAAWAAEABAACABwAAAAXAAAABAADABsAAAAXAAEABAADABwAAAAXAAUABAACABEAAAAXAAYABAACABIAAAAXAAwABAACABEAAAAXAA0ABAACABIAAAAXAA4ABAACAA8AAAAXAA8ABAACABAAAAAYAAAABAAEABsAAAAYAAEABAAEABwAAAAYAAUABAAAAA8AAAAYAAYABAAAABAAAAAYAA8ABAACABMAAAAZAAUABAABAA8AAAAZAAYABAABABAAAAAZAAsABAAAABgAAAAZAAwABAAAABkAAAAZAA4ABAAAABsAAAAZAA8ABAAAABwAAAAaAAAABAABABoAAAAaAAUABAACAA8AAAAaAAYABAACABAAAAAaAAkABAAdAAQAAAAaAAoABAAdAAUAAAAaAAsABAAFABYAAAAaAAwABAAFABcAAAAbAAAABAACABoAAAAbAAUABAAAAA8AAAAbAAYABAAAABAAAAAbAAsABAAGABYAAAAbAAwABAAGABcAAAAbAA0ABAAGABgAAAAcAAUABAABAA8AAAAcAAYABAABABAAAAAcAAsABAAFABYAAAAcAAwABAAFABcAAAAcAA0ABAAFABgAAAAdAAUABAACAA8AAAAdAAYABAACABAAAAAdAAsABAAGABYAAAAdAAwABAAGABcAAAAdAA0ABAAGABgAAAAeAAQABAAAABUAAAAeAAUABAAAABYAAAAeAAYABAAAABcAAAAeAAsABAAFABYAAAAeAAwABAAFABcAAAAeAA0ABAAFABgAAAAeAA4ABAAFABkAAAAeAA8ABAATAAgAAAAfAAQABAABABUAAAAfAAUABAABABYAAAAfAAYABAABABcAAAAfAAkABAASAAkAAAAfAAoABAASAAoAAAAfAAsABAAGABYAAAAfAAwABAAGABcAAAAfAA0ABAAGABgAAAAfAA4ABAAGABkAAAAfAA8ABAAUAAsAAAAgAAMABAACABQAAAAgAAQABAACABUAAAAgAAUABAACABYAAAAgAAYABAACABcAAAADABEABAAWAAUAAAAMABEABAAWAAUAAAAEAAoABAAWAAUAAAADAAoABAAWAAUAAAAKAAoABAAWAAUAAAAcAAgABAAWAAUAAAAYAAgABAAWAAUAAAAdABEABAAWAAUAAAAYABEABAAWAAUAAAAVABEABAAWAAUAAAA=")
tile_set = ExtResource("3_i6g32")

[node name="Platforms" type="TileMapLayer" parent="."]
texture_filter = 1
tile_map_data = PackedByteArray("AAABABAABAAIAA8AAAACABAABAAJAA8AAAADABAABAAIAA8AAAAEABAABAAJAA8AAAAFABAABAAIAA8AAAAGABAABAAJAA8AAAAHABAABAAIAA8AAAAIABAABAAJAA8AAAAJABAABAAIAA8AAAAKABAABAAJAA8AAAALABAABAAIAA8AAAAMABAABAAJAA8AAAANABAABAAIAA8AAAAOABAABAAJAA8AAAAPABAABAAIAA8AAAAQABAABAAJAA8AAAARABAABAAIAA8AAAASABAABAAJAA8AAAATABAABAAIAA8AAAAUABAABAAJAA8AAAAVABAABAAIAA8AAAAWABAABAAJAA8AAAAXABAABAAIAA8AAAAYABAABAAJAA8AAAAZABAABAAIAA8AAAAaABAABAAJAA8AAAAbABAABAAIAA8AAAAcABAABAAJAA8AAAAdABAABAAIAA8AAAAeABAABAAJAA8AAAAfABAABAAIAA8AAAAgABAABAAJAA8AAAAgABEABAAJABMAAAAfABEABAAIABMAAAAeABEABAANABIAAAAdABEABAAMABIAAAAcABEABAAMABIAAAAbABEABAAMABIAAAAaABEABAAMABIAAAAZABEABAAMABIAAAAVABEABAAMABIAAAAWABEABAAMABIAAAAMABEABAAMABIAAAANABEABAAMABIAAAAOABEABAAMABIAAAAPABEABAANABIAAAAQABEABAAIABMAAAARABEABAAJABMAAAASABEABAALABIAAAATABEABAAMABIAAAAUABEABAAMABIAAAAGABEABAAIABMAAAAHABEABAAJABMAAAAYABEABAAMABIAAAAXABEABAAMABIAAAALABEABAAMABIAAAAKABEABAAMABIAAAAJABEABAAMABIAAAAIABEABAALABIAAAAFABEABAANABIAAAAEABEABAAMABAAAAADABEABAAMABAAAAACABEABAAMABAAAAABABEABAAMABAAAAAFAAgABAAKAA8AAAAGAAgABAALAA8AAAADAAgABAAIAA8AAAAEAAgABAAJAA8AAAABAAgABAAIAA8AAAACAAgABAAJAA8AAAAAAAgABAAIAA8AAAAHAAgABAAIABYAAAAHAAkABAAIABcAAAAIAAgABAAJABYAAAAIAAkABAAJABcAAAAJAAkABAAIAA8AAAAKAAkABAAJAA8AAAALAAkABAAIAA8AAAAMAAkABAAJAA8AAAANAAkABAAMABMAAAANAAoABAAMABQAAAANAAsABAAMABUAAAAMAAsABAALABUAAAALAAsABAALABUAAAAKAAsABAALABUAAAAJAAsABAALABUAAAAIAAsABAALABUAAAAHAAsABAALABUAAAAGAAsABAALABUAAAAFAAsABAALABUAAAAEAAsABAALABUAAAADAAsABAALABUAAAACAAsABAALABUAAAABAAsABAALABUAAAAAAAsABAALABUAAAAAAAkABAALABQAAAAAAAoABAAMABIAAAABAAoABAAMABIAAAACAAoABAAMABIAAAADAAoABAAMABIAAAACAAkABAAJABAAAAABAAkABAAIABAAAAADAAkABAALABIAAAAEAAkABAAMABAAAAAFAAkABAANABAAAAAFAAoABAANABIAAAAGAAkABAALABEAAAAGAAoABAALABIAAAAEAAoABAAMABAAAAAHAAoABAAMABIAAAAIAAoABAAMABIAAAAJAAoABAAMABIAAAAKAAoABAAMABIAAAALAAoABAAMABIAAAAMAAoABAANABIAAAAfAAcABAAIAA8AAAAgAAcABAAJAA8AAAAdAAcABAAIAA8AAAAeAAcABAAJAA8AAAAbAAcABAAIAA8AAAAcAAcABAAJAA8AAAAZAAcABAAIAA8AAAAaAAcABAAJAA8AAAAXAAcABAAIAA8AAAAYAAcABAAJAA8AAAAWAAcABAAKABMAAAAWAAgABAAKABQAAAAWAAkABAAKABUAAAAXAAgABAALABIAAAAXAAkABAALABUAAAAYAAkABAALABUAAAAZAAkABAALABUAAAAaAAkABAALABUAAAAbAAkABAALABUAAAAcAAkABAALABUAAAAdAAkABAALABUAAAAeAAkABAALABUAAAAfAAkABAALABUAAAAgAAkABAALABUAAAAYAAgABAAMABIAAAAZAAgABAAMABIAAAAaAAgABAAMABIAAAAbAAgABAAMABIAAAAdAAgABAAMABIAAAAeAAgABAAMABIAAAAcAAgABAAMABIAAAAfAAgABAAMABIAAAAgAAgABAANABIAAAAAABAABAAJAA8AAAAAABEABAAMAA8AAAD//wAABAAMABQAAAD//wEABAAMABQAAAD//wIABAAMABQAAAD//wMABAAMABQAAAD//wQABAAMABQAAAD//wUABAAMABQAAAD//wYABAAMABQAAAD//wcABAAMABQAAAD//wgABAAMABQAAAD//wkABAAMABQAAAD//woABAAMABQAAAD//wsABAAMABQAAAD//wwABAAMABQAAAD//w0ABAAMABQAAAD//w4ABAAMABQAAAD//w8ABAAMABQAAAD//xAABAAMABQAAAD//xEABAAMABQAAAAhABEABAAKABQAAAAhABAABAAKABQAAAAhAA8ABAAKABQAAAAhAA4ABAAKABQAAAAhAA0ABAAKABQAAAAhAAwABAAKABQAAAAhAAsABAAKABQAAAAhAAoABAAKABQAAAAhAAkABAAKABQAAAAhAAgABAAKABQAAAAhAAcABAAKABQAAAAhAAYABAAKABQAAAAhAAUABAAKABQAAAAhAAQABAAKABQAAAAhAAMABAAKABQAAAAhAAIABAAKABQAAAAhAAEABAAKABQAAAAhAAAABAAKABQAAAAhAP//BAAKABQAAAAhAP7/BAAKABQAAAAhAP3/BAAKABQAAAAhAPz/BAAKABQAAAAhAPv/BAAKABQAAAAhAPr/BAAKABQAAAAhAPn/BAAKABQAAAAhAPj/BAAKABQAAAAhAPf/BAAKABQAAAAhAPb/BAAKABQAAAAhAPX/BAAKABQAAAAhAPT/BAAKABQAAAAhAPP/BAAKABQAAAAhAPL/BAAKABQAAAAhAPH/BAAKABQAAAAhAPD/BAAKABQAAAAhAO//BAAKABQAAAAhAO7/BAAKABQAAAAhAO3/BAAKABQAAAAhAOz/BAAKABQAAAD/////BAAMABQAAAD///7/BAAMABQAAAD///3/BAAMABQAAAD///z/BAAMABQAAAD///v/BAAMABQAAAD///r/BAAMABQAAAD///n/BAAMABQAAAD///j/BAAMABQAAAD///f/BAAMABQAAAD///b/BAAMABQAAAD///X/BAAMABQAAAD///T/BAAMABQAAAD///P/BAAMABQAAAD///L/BAAMABQAAAD///H/BAAMABQAAAD///D/BAAMABQAAAD//+//BAAMABQAAAD//+7/BAAMABQAAAD//+3/BAAMABQAAAD//+z/BAAMABQAAAAAAA8ABAAMABQAAAAAAA4ABAAMABQAAAAAAA0ABAAMABQAAAAAAAwABAAMABQAAAAAAAcABAAMABQAAAAAAAYABAAMABQAAAAAAAUABAAMABQAAAAAAAQABAAMABQAAAAAAAMABAAMABQAAAAAAAIABAAMABQAAAAAAAEABAAMABQAAAAAAAAABAAMABQAAAAAAP//BAAMABQAAAAAAP7/BAAMABQAAAAAAP3/BAAMABQAAAAAAPz/BAAMABQAAAAAAPv/BAAMABQAAAAAAPr/BAAMABQAAAAAAPn/BAAMABQAAAAAAPj/BAAMABQAAAAAAPf/BAAMABQAAAAAAPb/BAAMABQAAAAAAPX/BAAMABQAAAAAAPT/BAAMABQAAAAAAPP/BAAMABQAAAAAAPL/BAAMABQAAAAAAPH/BAAMABQAAAAAAPD/BAAMABQAAAAAAO//BAAMABQAAAAAAO7/BAAMABQAAAAAAO3/BAAMABQAAAAAAOz/BAAMABQAAAA=")
tile_set = ExtResource("3_i6g32")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(272, 144)
zoom = Vector2(2.25, 2.25)

[node name="UI" type="Control" parent="Camera2D"]
texture_filter = 3
layout_mode = 3
anchors_preset = 0
offset_left = -272.0
offset_top = -144.0
offset_right = -232.0
offset_bottom = -104.0

[node name="TextBox" type="Panel" parent="Camera2D/UI"]
visible = false
layout_mode = 0
offset_left = 23.0
offset_top = 8.0
offset_right = 526.0
offset_bottom = 85.0
script = ExtResource("5_h4fw4")

[node name="Voiceline" type="RichTextLabel" parent="Camera2D/UI/TextBox"]
layout_mode = 0
offset_left = 6.0
offset_top = 5.0
offset_right = 499.0
offset_bottom = 69.0
theme_override_fonts/normal_font = ExtResource("4_i6g32")
text = "What? you want to perform the test on me? I guess I've got no choice right? 
"
scroll_active = false

[node name="InteractText" type="Control" parent="Camera2D/UI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GameInteract" type="RichTextLabel" parent="Camera2D/UI/InteractText"]
visible = false
layout_mode = 0
offset_left = 91.0
offset_top = 261.0
offset_right = 487.0
offset_bottom = 301.0
theme_override_fonts/normal_font = ExtResource("4_i6g32")
text = "press F to enter the psychoscape"
horizontal_alignment = 1

[node name="CharacterInteract" type="RichTextLabel" parent="Camera2D/UI/InteractText"]
visible = false
layout_mode = 0
offset_left = 65.0
offset_top = 264.0
offset_right = 461.0
offset_bottom = 304.0
theme_override_fonts/normal_font = ExtResource("4_i6g32")
text = "press F to talk"
horizontal_alignment = 1

[node name="RoomInteract" type="RichTextLabel" parent="Camera2D/UI/InteractText"]
visible = false
layout_mode = 0
offset_left = 68.0
offset_top = 263.0
offset_right = 464.0
offset_bottom = 303.0
theme_override_fonts/normal_font = ExtResource("4_i6g32")
text = "press F to leave current area"
horizontal_alignment = 1

[node name="Player" parent="." instance=ExtResource("4_1l0tm")]
position = Vector2(265, 238)

[node name="NPC" parent="." instance=ExtResource("5_wowpa")]
position = Vector2(54, 104)
version = 2
blurb = "lmao i'm not a replicant fr ong"
